--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'war'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+
 }
 
 group = 'aca98b'
@@ -17,8 +18,20 @@ repositories {
 }
 
 dependencies {
+    compileOnly('jakarta.servlet:jakarta.servlet-api:6.0.0')
+    implementation('jakarta.annotation:jakarta.annotation-api:2.1.1')
+    implementation('org.springframework:spring-context:6.0.13')
+    implementation('org.springframework:spring-webmvc:6.0.13')
+
+    implementation('org.springframework.data:spring-data-jpa:3.1.5')
+    implementation('jakarta.persistence:jakarta.persistence-api:3.1.0')
+    implementation('org.hibernate:hibernate-core:6.0.2.Final')
+    implementation('org.postgresql:postgresql:42.6.0')
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.security:spring-security-web:6.1.2')
+    implementation('org.springframework.security:spring-security-config:6.1.2')
+    implementation('org.springframework.security:spring-security-taglibs:6.1.2')
     runtimeOnly 'org.postgresql:postgresql'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
