--- a/build.gradle
+++ b/build.gradle
@@ -28,16 +28,71 @@ dependencies {
     implementation('org.hibernate:hibernate-core:6.0.2.Final')
     implementation('org.postgresql:postgresql:42.6.0')
 
-    implementation('com.fasterxml.jackson.core:jackson-annotations:2.3.3')
-    implementation('com.fasterxml.jackson.core:jackson-databind:2.15.1')
+//    implementation('com.fasterxml.jackson.core:jackson-annotations:2.3.3')
+//    implementation('com.fasterxml.jackson.core:jackson-databind:2.15.1')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation('org.springframework.security:spring-security-web:6.1.2')
-    implementation('org.springframework.security:spring-security-config:6.1.2')
-    implementation('org.springframework.security:spring-security-taglibs:6.1.2')
+//    implementation('org.springframework.security:spring-security-web:6.1.2')
+//    implementation('org.springframework.security:spring-security-config:6.1.2')
+//    implementation('org.springframework.security:spring-security-taglibs:6.1.2')
     runtimeOnly 'org.postgresql:postgresql'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Third party dependencies
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework:spring-aspects'
+
+    // Third party dependencies
+    implementation 'com.auth0:java-jwt:3.8.3'                                               // Contains vulnerabilities
+    implementation 'com.codahale.metrics:metrics-core:3.0.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.0'
+    implementation 'com.google.code.gson:gson'                                        // Contains vulnerabilities
+    implementation 'com.googlecode.java-ipv6:java-ipv6:0.17'
+    implementation 'com.itextpdf:itextpdf:5.5.13.1'                                         // Contains vulnerabilities
+    implementation 'com.jayway.jsonpath:json-path:2.4.0'                                    // Contains vulnerabilities
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
+    implementation 'commons-net:commons-net:3.8.0'                                          // Contains vulnerabilities
+//    implementation 'de.grundid.opendatalab:geojson-jackson:1.14'
+    implementation 'eu.bitwalker:UserAgentUtils:1.20'                                       // Contains vulnerabilities
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+    implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'                                      // Contains vulnerabilities
+    implementation 'org.apache.commons:commons-collections4:4.4'                            // Contains vulnerabilities
+    implementation 'org.apache.commons:commons-compress:1.21'
+    implementation 'org.apache.commons:commons-csv:1.9.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.12.1'   // Contains vulnerabilities
+// Contains vulnerabilities
+    implementation 'org.jetbrains:annotations:13.0'
+    implementation 'org.openjdk.jmh:jmh-core:1.25'
+
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+    compileOnly 'org.projectlombok:lombok'
+
+
+    // Test dependencies
+    testImplementation 'com.h2database:h2'
+    testImplementation 'commons-io:commons-io:1.3.2'
+    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.25'
+    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.testcontainers:junit-jupiter:1.15.0'
+    testImplementation 'org.testcontainers:postgresql:1.15.0'
+    testImplementation 'org.testcontainers:testcontainers:1.15.0'
+
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
 }
 
 tasks.named('bootBuildImage') {
