--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 HELP.md
+.TODO
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
+!**/src/main/resources/application.properties
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -37,3 +39,4 @@ out/
 .vscode/
 /src/main/resources/
 /src/main/resources/*
+/src/main/resources/
