--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,11 @@ dependencies {
     implementation 'com.google.code.findbugs:jsr305:3.0.0'
     implementation 'com.google.code.gson:gson'                                        // Contains vulnerabilities
     implementation 'com.googlecode.java-ipv6:java-ipv6:0.17'
-    implementation 'com.itextpdf:itextpdf:5.5.13.1'                                         // Contains vulnerabilities
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
     implementation 'com.jayway.jsonpath:json-path:2.4.0'                                    // Contains vulnerabilities
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
