--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:4563/studs
 spring.datasource.username=s367845
-spring.datasource.password=lol
+spring.datasource.password= inst: @vsem_privet_me_omlet
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
