--- a/build.gradle
+++ b/build.gradle
@@ -54,20 +54,21 @@ dependencies {
     implementation 'com.jayway.jsonpath:json-path:2.4.0'                                    // Contains vulnerabilities
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
-    implementation 'commons-net:commons-net:3.8.0'                                          // Contains vulnerabilities
+    implementation 'commons-net:commons-net:3.9.0'                                          // Contains vulnerabilities
     implementation 'eu.bitwalker:UserAgentUtils:1.20'                                       // Contains vulnerabilities
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-//
+
     implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'                                      // Contains vulnerabilities
     implementation 'org.apache.commons:commons-collections4:4.4'                            // Contains vulnerabilities
     implementation 'org.apache.commons:commons-compress:1.21'
     implementation 'org.apache.commons:commons-csv:1.9.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-//    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.12.1'   // Contains vulnerabilities
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.12.1'   // Contains vulnerabilities
+
 //// Contains vulnerabilities
-//    implementation 'org.jetbrains:annotations:13.0'
-//    implementation 'org.openjdk.jmh:jmh-core:1.25'
+    implementation 'org.jetbrains:annotations:13.0'
+    implementation 'org.openjdk.jmh:jmh-core:1.25'
 
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -76,16 +77,16 @@ dependencies {
 
 
 //    // Test dependencies
-//    testImplementation 'com.h2database:h2'
-//    testImplementation 'commons-io:commons-io:1.3.2'
-//    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.25'
-//    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-////    testImplementation 'org.springframework.security:spring-security-test'
-//    testImplementation 'org.testcontainers:junit-jupiter:1.15.0'
-//    testImplementation 'org.testcontainers:postgresql:1.15.0'
-//    testImplementation 'org.testcontainers:testcontainers:1.15.0'
-//
+    testImplementation 'com.h2database:h2'
+    testImplementation 'commons-io:commons-io:1.3.2'
+    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.25'
+    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.testcontainers:junit-jupiter:1.15.0'
+    testImplementation 'org.testcontainers:postgresql:1.15.0'
+    testImplementation 'org.testcontainers:testcontainers:1.15.0'
+
     testAnnotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
 }
