--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "angular-localstorage": "^1.1.5",
     "primeng": "^17.0.0-beta.1"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.29"
   }
 }
